--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 !.gitignore
 !LICENSE
 !README.md
-!grok-fancy.jpg
 !screen1.jpg
 !screen2.jpg
 !screen3.jpg
+!discoverable.jpg
 !grok-minimal.jpg
 !early-init.el
 !init.el
