Add better bind images

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 !screen1.jpg
 !screen2.jpg
 !screen3.jpg
-!discoverable.jpg
+!which-key-evil.jpg
+!which-key-holy.jpg
 !grok-minimal.jpg
 !early-init.el
 !init.el
